<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LouvreMuseum">

    <ImageView
        android:id="@+id/DetailView_HeadImage"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="@string/DetailView_HeadImageDescription"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/DetailView_HeadTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/Louvre1" />

    <TextView
        android:id="@+id/DetailView_HeadTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/DetailView_HeadTitle"
        android:textColor="@color/Principal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/DetailView_TextBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DetailView_HeadIcon"
        app:layout_constraintTop_toBottomOf="@+id/DetailView_HeadImage" />

    <ImageView
        android:id="@+id/DetailView_HeadIcon"
        android:layout_width="79dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/DetailView_HeadIcon"
        app:layout_constraintBottom_toTopOf="@+id/DetailView_TextBody"
        app:layout_constraintEnd_toStartOf="@+id/DetailView_HeadTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DetailView_HeadImage"
        app:srcCompat="@drawable/museum" />

    <TextView
        android:id="@+id/DetailView_TextBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/DetailView_TextBody"
        android:textColor="@color/Tertiary"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/DetailView_LocationImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DetailView_HeadTitle" />


    <TextView
        android:id="@+id/DetailView_TemperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/DetailView_TemperatureText"
        android:textColor="@color/Warning"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/DetailView_TemperatureIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DetailView_TemperatureIcon"
        app:layout_constraintTop_toTopOf="@+id/DetailView_TemperatureIcon" />

    <ImageView
        android:id="@+id/DetailView_LocationImage"
        android:layout_width="248dp"
        android:layout_height="189dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/DetailView_LocationImageDescription"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DetailView_TextBody"
        app:srcCompat="@drawable/LouvreLocation" />


    <TextView
        android:id="@+id/DetailView_LocationText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/DetailView_LocationText"
        android:textColor="@color/Alert"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DetailView_LocationImage"
        app:layout_constraintTop_toBottomOf="@+id/DetailView_LocationIcon" />

    <ImageView
        android:id="@+id/DetailView_TemperatureIcon"
        android:layout_width="55dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/DetailView_TemperatureIconDescription"
        app:layout_constraintStart_toEndOf="@+id/DetailView_LocationImage"
        app:layout_constraintTop_toBottomOf="@+id/DetailView_LocationText"
        app:srcCompat="@drawable/Temperature" />

    <ImageView
        android:id="@+id/DetailView_LocationIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/DetailView_LocationText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DetailView_LocationImage"
        app:layout_constraintTop_toTopOf="@+id/DetailView_LocationImage"
        app:srcCompat="@drawable/location"
        android:contentDescription="@string/DetailView_LocationIconDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>