<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#C34A4A"
    android:scrollbars="vertical"
    tools:context=".NotreDameCathedralActivity">

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="48dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:numStars="1"
        android:rating="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="343dp"
        android:layout_height="261dp"
        android:contentDescription="@string/cathedral_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ver"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="64dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:text="@string/Botton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiAutoCompleteTextView"
        app:layout_constraintVertical_bias="0.209"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:ems="10"
        android:text="@string/place"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/multiAutoCompleteTextView"
        android:layout_width="342dp"
        android:layout_height="248dp"
        android:text="@string/description"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>