<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_image_view"
            android:layout_width="match_parent"
            android:layout_height="219dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/versailles_0"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/versailles_0" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_image_view">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/img_0_info"
                app:srcCompat="@drawable/versailles_0"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/img_1_info"
                app:srcCompat="@drawable/versailles_1" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/img_2_info"
                app:srcCompat="@drawable/versailles_2"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="85dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:contentDescription="@string/img_3_info"
                app:srcCompat="@drawable/versailles_3"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/poi_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/poi_name"
            android:textColor="#2D2C33"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:text="@string/poi_name" />

        <ImageView
            android:id="@+id/icon_star"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="5dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/poi_name"
            app:layout_constraintEnd_toStartOf="@+id/poi_value"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/poi_name"
            app:layout_constraintTop_toTopOf="@+id/poi_name"
            app:layout_constraintVertical_bias="0.833"
            app:srcCompat="@drawable/icon_star"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/poi_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:text="@string/poi_value"
            app:layout_constraintBaseline_toBaselineOf="@+id/poi_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/poi_value" />

        <TextView
            android:id="@+id/poi_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="@string/poi_location"
            android:textColor="#2D2C01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poi_name"
            tools:text="@string/poi_location" />

        <TextView
            android:id="@+id/poi_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/poi_description"
            android:textColor="#2D2C33"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poi_location"
            tools:text="@string/poi_description" />

        <FrameLayout
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poi_description">
            <fragment
                class="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/map_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poi_description"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>